# WebRS_MTF_Threshold

./: .gitignore  .replit  ADO_Early_Termination_Analysis.md  ADO_FIX_SUMMARY.md  ANIMATION_CONFIGURATION_GUIDE.md  CLAUDE.md  Claude_Collaboration_Summary.md  DATABASE_FIX_README.md  HIGH_DPI_SETUP_GUIDE.md  MTF_Explanation.md  PIXEL_PERFECT_SETUP.md  Performance_Analysis_Base64_Optimization.md  README_testing.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  REFACTOR_PLAN.md  ado_optimizer.py  app.py  app_new.py  browser_pixel_perfect_guide.md  check_dependencies.py  check_image_dimensions.py  check_replit_database.py  create_fixation_gif.py  create_mtf_images.py  css_animation_benchmark.html  csv_data_manager.py  data_manager.py  data_storage  database.py  database_manager.py  dpi_bypass_test.py  dynamic_countdown_test.html  experiment.py  gemini_plan.md  init_replit_database.py  install_deps.py  main.py  migrate_database.py  migrate_database_cleanup.py  (+29 more)
.devcontainer/: devcontainer.json
.streamlit/: config.toml
archive/: Analysis_ADO_Psychometric_YN.py  auto_install_packages.py  check_csv_storage.py  create_tables.py  install_database_deps.py  monitor_both_storage.py  monitor_database.py
config/: __init__.py  logging_config.py  settings.py
core/: __init__.py  async_image_processor.py  experiment_controller.py  session_manager.py
docs/: WebRS_MTF_Experiment_Flow.md
experiment_data/: test_app_user_5251_data.csv  test_app_user_5251_summary.json  yes麻油2_data.csv  yes麻油2_summary.json  yes麻油_data.csv  yes麻油_summary.json
experiments/: Exp_MTF_ADO.py  ado_utils.py  (+3 more)
(+37 files in other folders)
