[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.3.0",
    "scipy>=1.15.3",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
]
