[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.46.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scipy>=1.15.3",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "python-dateutil>=2.8.0",
]
